<resources>
    <string name="app_name">Grappi GIS</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Enter</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="orthophoto">Orthophoto</string>
    <string name="delete_this_point">Are you sure you want to delete this point?</string>
    <string name="delete_point">Delete point</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="add_a_description">Add a description</string>
    <string name="add_photo">Add a photo</string>
    <string name="take_photo_prompt">Would you like to take a photo and connect it to this entry?</string>
    <string name="description_alias">Description</string>
    <string name="pic_url_alias">URL</string>

    <string name="field_mandatory">This field is mandatory</string>
    <string name="update_system">Update system</string>
    <string name="version_text">Beta</string>
    <string name="reset_password_via_email">Reset password via Email</string>
    <string name="enter_valid_email">Please enter a valid email</string>
    <string name="reset_pass_sent">Reset password instructions were sent to your email.</string>
    <string name="vould_not_find_address">Could not find this email address</string>
    <string name="already_subscribed">This user is already set for a different device, contact us to add another user</string>
    <string name="not_subscribed">You are not subscribed contact us on to subscribe</string>
    <string name="layer">Layer</string>
    <string name="loading_point_image">Uploading image</string>
    <string name="initial_download_message">Initializing the app, this may take a few moments</string>
    <string name="please_wait">Please wait…</string>
    <string name="commencing_download">Downloading</string>
    <string name="continue_to_photo">take a photo</string>
    <string name="no_thank_you">no thank you</string>
    <string name="uploaded">Uploaded</string>
    <string name="progress">progress: </string>
    <string name="measure_track">measure track distance</string>
    <string name="measure_polygon_area">measure polygon area</string>
    <string name="choose_a_layer">Choose a layer</string>
    <string name="choose_a_layer_to_edit">Select layer type</string>
    <string name="close">Close</string>
    <string name="client_point">User Pin</string>
    <string name="description">description</string>
    <string name="category">Category</string>
    <string name="polyline_saved">Polyline Saved</string>
    <string name="my_polyline">My Polylines</string>
    <string name="add_category">Add category</string>
    <string name="add_number">Add number</string>
    <string name="save">Save</string>
    <string name="polyline_layer">Polyline Layer</string>
    <string name="polygon_layer">Polygon Layer</string>
    <string name="point_layer">Point Layer</string>
    <string name="add_data">Add data to</string>
    <string name="number">Number</string>
    <string name="yes">Yes</string>
    <string name="update_system_show">To update</string>
    <string name="no">No</string>
    <string name="length">Length</string>
    <string name="dunam">Dunam</string>
    <string name="section">Section</string>
    <string name="uploading_layer">Uploading layer, please do not turn off</string>
    <string name="image_upload_failed">Image upload failed</string>
    <string name="coming_soon">Coming Soon...</string>
    <string name="no_support">Feature not supported</string>
    <string name="understood">Understood</string>
    <string name="empty_polyline">Please draw a polyline</string>
    <string name="failed_to_download_image">failed to download preview image</string>
    <string name="delete_layer_dialog_headline">Delete Feature?</string>
    <string name="delete_layer_dialog_message">The feature will be permanently deleted.</string>
    <string name="updating_layer">Updating Layer, please do not close the app</string>
    <string name="layer_updated">Layer Updated</string>
    <string name="area">Area</string>
    <string name="other">Other</string>
    <string name="user_polyline">User Polyline</string>
    <string name="user_points">User Points</string>
    <string name="my_points">My Points</string>
    <string name="point_saved">Point saved</string>
    <string name="points_layer">Points Layer</string>
    <string name="init_dialog_headline">Setting things up</string>
    <string name="init_dialog_message">please wait</string>
    <string name="empty_Point">Empty point, Please tap to pin a point</string>
    <string name="my_layers">My Layers</string>
    <string name="grappi_app_name">Grappi GIS</string>
    <string name="search_here">Search here</string>
    <string name="start_search">Search</string>
    <string name="search_hint">Search Value</string>
    <string name="search_no_results">Search found no results</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="search_headline">Search Features</string>
    <string name="select_category">Select Category</string>
    <string name="select_layer">Select Layer</string>
    <string name="all_invisible">Uncheck All</string>
    <string name="polygon_saved">Polygon Saved</string>
    <string name="my_polygon">My Polygon</string>
    <string name="empty_polygon">Empty Polygon</string>
    <string name="closing_app">Closing App</string>
    <string name="closing_message">Are you sure you want to close GrAppi?</string>
    <string name="add_layer">Add New Layer</string>
    <string name="system_name_english">System Layer Name[English Only]</string>
    <string name="add_layer_alias">Alias[Layer Display Name]</string>
    <string name="layer_type">Layer Type</string>
    <string name="symbol_fill_color_headline">Symbology[Choose a layer color]</string>
    <string name="next">Next</string>
    <string name="exiting_offline_headline">Updating server data</string>
    <string name="exiting_offline_message">Do not close app</string>
    <string name="offline_image_no_support">Offline doesn\'t support images (yet)</string>
    <string name="finalising_download">Finalising download, this might take a few more minutes</string>
    <string name="email_update_message">Please update my input</string>
    <string name="email_update_headline">Grappi Update for </string>
    <string name="email_update">Send Email</string>
    <string name="serial_number">serial number: </string>
    <string name="select_image_source">Please select image source</string>
    <string name="camera">Camera</string>
    <string name="image_gallery">Image Gallery</string>
    <string name="no_image">Without an image</string>
    <string name="please_wait_file_number">Please wait… File number:</string>
    <string name="subscription_ends_header">Subscription ends soon</string>
    <string name="subscription_ends_msg">Please contact us to renew or purchase a subscription</string>
    <string name="multipoint_layer">Multipoint Layer</string>
    <string name="hydrants">Hydrants</string>
    <string name="two_zol">2"</string>
    <string name="three_zol">3"</string>
    <string name="type_of_hydrant">Hydrant Type:</string>
    <string name="hydrant_heads">Number of exits:</string>
    <string name="atmospheric">Atmospheric Pressure:</string>
    <string name="tracker_mode">Tracker Mode</string>
</resources>
