<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.BottomSheet">

    <TextView
        android:id="@+id/imageSourceHeadlineTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/select_image_source"
        android:textColor="@color/light_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cameraImageResourceTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="36dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_add_photo"
        android:drawablePadding="8dp"
        android:drawableTint="@color/white"
        android:gravity="start|center"
        android:padding="8dp"
        android:textColor="@color/white"
        android:text="@string/camera"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageSourceHeadlineTV" />

    <TextView
        android:id="@+id/galleryImageResourceTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="36dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_add_point"
        android:drawablePadding="16dp"
        android:textColor="@color/white"
        android:drawableTint="@color/white"
        android:gravity="start|center"
        android:padding="8dp"
        android:text="@string/image_gallery"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cameraImageResourceTV" />

    <TextView
        android:id="@+id/noImageSourceTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/no_image"
        android:textColor="@color/soft_red"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/galleryImageResourceTV" />

</androidx.constraintlayout.widget.ConstraintLayout>